# sysmon

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml
config/: default.conf  sysmon.toml
docs/: v1-architecture.md  v1-roadmap.md  v2-architecture.md  v2-roadmap.md  whole_doc.md
registry/: index.toml
scripts/: ascii_art.txt  install.sh
scripts/plugins/: gpu_monitor.sh  temperature.sh
scripts/plugins/builtin/gpu-monitor/: manifest.toml  plugin.sh
scripts/plugins/builtin/temperature/: manifest.toml  plugin.sh
src/: main.cpp
src/bridge/: sysmon_bridge.c  sysmon_bridge.h
src/cli/: cli_config.c  cli_main.c  cli_main.h  cli_plugin.c  cli_registry.c  main.c
src/core/: collection_engine.c  collection_engine.h  config_parser.c  config_parser.h  config_paths.c  config_paths.h  cpu_stats.c  cpu_stats.h  disk_stats.c  disk_stats.h  mem_stats.c  mem_stats.h  net_stats.c  net_stats.h  plugin_manager.c  plugin_manager.h  plugin_manifest.c  plugin_manifest.h  plugin_protocol.c  plugin_protocol.h  plugin_registry.c  plugin_registry.h  plugin_state.c  plugin_state.h  proc_reader.c  proc_reader.h  process_list.c  process_list.h  process_sort.c  process_sort.h  snapshot_manager.c  snapshot_manager.h  sysinfo.c  sysinfo.h  types.h  username_cache.c  username_cache.h
src/tui/: app.cpp  app.h  event_loop.cpp  event_loop.h  input_handler.cpp  input_handler.h  screen_manager.cpp  screen_manager.h  theme.cpp  theme.h
src/tui/components/: connection_table.cpp  connection_table.h  cpu_panel.cpp  cpu_panel.h  disk_panel.cpp  disk_panel.h  header.cpp  header.h  help_panel.cpp  help_panel.h  memory_panel.cpp  memory_panel.h  mini_process_panel.cpp  mini_process_panel.h  network_panel.cpp  network_panel.h  panel.cpp  panel.h  plugin_pane.cpp  plugin_pane.h  plugin_panel.cpp  plugin_panel.h  process_detail.cpp  process_detail.h  process_table.cpp  process_table.h
src/tui/screens/: connection_screen.cpp  connection_screen.h  dashboard_screen.cpp  dashboard_screen.h  help_screen.cpp  help_screen.h  plugin_page_screen.cpp  plugin_page_screen.h  process_detail_screen.cpp  process_detail_screen.h  process_list_screen.cpp  process_list_screen.h  screen.cpp  screen.h
tests/: CMakeLists.txt  test_placeholder.cpp  test_proc_reader.cpp  test_snapshot_manager.cpp  test_utils.h
